--- a/index.html
+++ b/index.html
@@ -419,7 +419,8 @@
     return {
       name: product.name,
       quantity: product.quantity,
-      category: product.category
+      category: product.category,
+      price: product.price
     }
   }); // Получаем все товары и их количество в корзине
   
