--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
   <section id='productSection'>
     <!-- Iframe content / Product display goes here -->
+     <!-- Iframe content / Product display goes here -->
   </section>
   <div id="myModal" class="modal">
     <div class="modal-content">
